--- a/index.html
+++ b/index.html
@@ -1,69 +1,41 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
-  <title>Selamat Ulang Tahun</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Selamat Ulang Tahun Resty!</title>
   <style>
     body {
-      background-color: pink;
+      font-family: 'Comic Sans MS', cursive;
+      background: linear-gradient(to right, #fbc2eb, #a6c1ee);
+      color: #333;
       text-align: center;
-      font-family: sans-serif;
-      padding-top: 100px;
+      padding: 50px;
+    }
+    .card {
+      background-color: white;
+      border-radius: 20px;
+      padding: 30px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.1);
+      display: inline-block;
+      max-width: 400px;
     }
     h1 {
-      font-size: 40px;
-      color: #fff;
+      color: #ff69b4;
     }
-    p {
-      font-size: 22px;
-      color: #fff;
+    .emoji {
+      font-size: 40px;
     }
   </style>
 </head>
 <body>
-  <h1>🎉 Selamat Ulang Tahun, Resty Yuliatie!</h1>
-  <p>Semoga panjang umur dan bahagia yaa 🥳</p>
-
-  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
-  <script>
-    confetti({
-      particleCount: 150,
-      spread: 100,
-      origin: { y: 0.6 }
-    });
-  </script>
-</body>
-</html><!DOCTYPE html>
-<html>
-<head>
-  <title>Selamat Ulang Tahun</title>
-  <style>
-    body {
-      background-color: pink;
-      text-align: center;
-      font-family: sans-serif;
-      padding-top: 100px;
-    }
-    h1 {
-      font-size: 40px;
-      color: #fff;
-    }
-    p {
-      font-size: 22px;
-      color: #fff;
-    }
-  </style>
-</head>
-<body>
-  <h1>🎉 Selamat Ulang Tahun, Resty Yuliatie!</h1>
-  <p>Semoga panjang umur dan bahagia yaa 🥳</p>
-
-  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
-  <script>
-    confetti({
-      particleCount: 150,
-      spread: 100,
-      origin: { y: 0.6 }
-    });
-  </script>
+  <div class="card">
+    <div class="emoji">🎂🎉💖</div>
+    <h1>Selamat Ulang Tahun, Resty!</h1>
+    <p>Hari ini adalah hari spesial... karena kamu lahir dan bikin dunia jadi lebih indah ✨</p>
+    <p>Dari Ammar yang (lagi-lagi) ngoding demi kamu 😄</p>
+    <p>Semoga semua impianmu tercapai, dan jangan lupa senyum terus yaa 🌸</p>
+    <div class="emoji">💌🌈🧁</div>
+  </div>
 </body>
 </html>
