--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="emoji">🎂🎉💖</div>
     <h1>Selamat Ulang Tahun, Resty!</h1>
     <p>Hari ini adalah hari spesial... karena kamu lahir dan bikin dunia jadi lebih indah ✨</p>
-    <p>Dari Ammar yang (lagi-lagi) ngoding demi kamu 😄</p>
+    <p>Dari Ammar yang (lagi belajar) ngoding demi kamu 😄</p>
     <p>Semoga semua impianmu tercapai, dan jangan lupa senyum terus yaa 🌸</p>
     <div class="emoji">💌🌈🧁</div>
   </div>
