--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
     }
   </style>
 </head>
-<body>
+<body> 
+  <audio autoplay loop>
+  <source src="https://www.bensound.com/bensound-music/bensound-sunny.mp3" type="audio/mpeg">
+  </audio>
   <div class="card">
     <div class="emoji">🎂🎉💖</div>
     <h1>Selamat Ulang Tahun, Resty!</h1>
