--- a/index.html
+++ b/index.html
@@ -52,10 +52,12 @@
 <body>
 
   <!-- Musik -->
-  <audio autoplay loop>
-    <source src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_c124b6b7b7.mp3?filename=happy-day-12368.mp3" type="audio/mpeg">
-    Your browser does not support the audio element.
-  </audio>
+  <audio id="myAudio" loop>
+  <source src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_c124b6b7b7.mp3?filename=happy-day-12368.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
+
+<button onclick="document.getElementById('myAudio').play()">▶️ Putar Musik</button>
 
   <!-- Kartu Ucapan -->
   <div class="card">
