--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
 
   <!-- Musik -->
   <audio id="myAudio" loop>
-  <source src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_c124b6b7b7.mp3?filename=happy-day-12368.mp3" type="audio/mpeg">
+  <source src="https://love-romantic-hopeful-music-333017.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
 
-<button onclick="document.getElementById('myAudio').play()">▶️ Putar Musik</button>
+<button onclick="document.getElementById('myAudio').play()"> 💣</button>
 
   <!-- Kartu Ucapan -->
   <div class="card">
