--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
 <body>  
 
   <!-- Audio dan tombol musik -->  
-  <audio id="myAudio" loop>  
-    <source src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_c124b6b7b7.mp3?filename=happy-day-12368.mp3" type="audio/mpeg">  
-    Your browser does not support the audio element.  
-  </audio>  
+  <audio id="myAudio" loop>
+  <source src="https://files.freemusicarchive.org/storage-freemusicarchive-org/music/no_curator/Scott_Holmes/Happy_Music/Scott_Holmes_-_Happy_Music.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
 
   <button onclick="startMusic()" style="padding: 10px 20px; font-size: 16px; background-color: pink; border: none; border-radius: 10px; cursor: pointer; margin-top: 20px;">  
     🎵 Sentuh di sini untuk mulai 🎵  
